[project]
name = "aml-synth-pipeline"
version = "0.1.0"
description = "Synthetic transaction graph generation and transfer evaluation for AMLWorld."
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "scipy>=1.12",
  "networkx>=3.2.1",
  "tqdm>=4.66",
  "pyyaml>=6.0.1",
  "matplotlib>=3.8",
  "torch>=2.2",
  "torch-geometric>=2.5",
]

[project.optional-dependencies]
dev = ["ruff>=0.6.0"]
# GraphMaker + DGL: pin torch to a version that matches bundled GraphBolt libs (often 2.2.x CPU wheels).
graphmaker = ["dgl>=2.2,<2.3", "torchdata>=0.7.1", "pydantic>=2"]

[tool.setuptools]
packages = ["data", "models", "generators", "evaluation", "pipeline", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py39"
