[project]
name = "aml-synth-pipeline"
version = "0.1.0"
description = "Synthetic transaction graph generation and transfer evaluation for AMLWorld."
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "scipy>=1.12",
  "networkx>=3.2.1",
  "tqdm>=4.66",
  "pyyaml>=6.0.1",
  "matplotlib>=3.8",
  # PyTorch 2.2+ includes MPS (Apple Silicon). Use official macOS wheels from pytorch.org if needed.
  "torch>=2.2",
  "torch-geometric>=2.5",
]

[project.optional-dependencies]
dev = ["ruff>=0.6.0"]
# RDP (ε, δ) accounting for DP-SGD training (`models/dp_train.py`).
dp = ["opacus>=1.4.0"]
# GraphMaker + DGL: DGL 2.2 mac wheels ship GraphBolt only for certain torch versions (not 2.8+).
# After: pip install -e ".[graphmaker]"  run  python3 -m scripts.verify_graphmaker_env
graphmaker = [
  "torch>=2.2.2,<=2.3.0",
  "dgl>=2.2,<2.3",
  "torchdata>=0.7.1,<0.8",
  "wandb>=0.16.0",
  "pydantic>=2",
]

[tool.setuptools]
packages = ["data", "models", "generators", "evaluation", "pipeline", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py39"
